--- a/public/components/todo-item.html
+++ b/public/components/todo-item.html
@@ -1,21 +1,16 @@
-<template id="todo-item" todoName="string" todoComplete="boolean" onFinish="callback" adv>
+<template id="todo-item" data-shadow="open" adv>
+  <data name="name" type="string" value=""></data>    
+  <data name="complete" type="boolean" value="false"></data>
   <style>
     todo-item {
-      list-style: none;
-
-      li {
-        transition: all 0.1s;
-      }
-
-      &[todoComplete="true"] {
-        & .title {
-          text-decoration: line-through;
-        }
-      }
+     &[data-complete="true"] input {
+      text-decoration: line-through;
     }
+    }
+ 
   </style>
   <script>
-    const { todoComplete, onFinish, todoName } = $self.attr;
+   
     const { completeBtn, deleteBtn, item } = $self.refs;
 
     const introTodoAnim = [
@@ -43,17 +38,16 @@
     const completedText = "✅ Finished";
     const incompletedText = "🔥 Finish";
 
-    completeBtn.innerText = todoComplete.value
+    completeBtn.innerText =  $self.attrs.complete.value
       ? completedText
       : incompletedText;
 
     const finishTodo = () => {
-      todoComplete.value = true;
+      $self.attrs.complete.value = true;
       completeBtn.innerText = completedText;
-      onFinish?.value(todoName.value);
     };
     const unfinishTodo = () => {
-      todoComplete.value = false;
+      $self.attrs.complete.value = false;
       completeBtn.innerText = incompletedText;
     };
 
@@ -68,8 +62,6 @@
     };
 
     return {
-      todoName,
-      todoComplete,
       finishTodo,
       unfinishTodo,
       deleteTodo,
@@ -79,12 +71,11 @@
 
   <li id="item" onload="{
         $scope.introTodo();
+        $self.refs.title.value = $self.attrs.name.value;
   }">
-    <input id="title" class="title" onload="{
-        $ref.value = $scope.todoName.value ?? '';
-      }" />
+    <input part id="title" class="title" />
     <button id="completeBtn" onclick="{
-        if ($scope.todoComplete.value === true) {
+        if ($self.attrs.complete.value === true) {
             $scope.unfinishTodo()
         }else{
             $scope.finishTodo()
