--- a/public/components/default-layout.html
+++ b/public/components/default-layout.html
@@ -1,4 +1,4 @@
-  <template id="default-layout" data-shadow="open" adv>
+  <template id="default-layout" adv>
     <style>
       .content {
         min-height: 60vh;
