--- a/public/components/basic/todo-component.html
+++ b/public/components/basic/todo-component.html
@@ -1,4 +1,4 @@
-<script type="text/adv" src="components/todo-item.html"></script>
+<script type="text/adv" src="components/basic/todo-item.html"></script>
 <template id="todo-component" adv>
   <style>
     .todo-wrapper {}
@@ -13,28 +13,23 @@
     }
   </style>
   <div id="wrapper" class="todo-wrapper" onload="
-    let todos = [];
+      data.todos = [];  
       self.addEventListener('delete:todo', (event) => {
-        console.log('delete:todo', event.detail);
-        todos = todos.filter(todo => todo.id != event.detail.todo.dataset.id);
-        event.detail.todo.remove()
-        self.refs.view.render({ todos });
+        data.todos = data.todos.filter(todo => todo.id != event.detail.todo.dataset.id );
+        event.detail.todo.remove();
+        self.refs.view.render({ todos:data.todos });
       });
-
-      self.data = { 
-        todos,
-        submitTodo,
-       };
+      
   ">
     <form part="submit_form" id="form" 
       onsubmit="
         event.preventDefault();
-          todos.push({
-            id: todos.length,
+          data.todos.push({
+            id: data.todos.length,
             title: self.refs.input.value  
           });
         self.refs.input.value = '';
-        self.refs.view.render({ todos });
+        self.refs.view.render({ todos:data.todos });
        ">
       <slot name="title">
         <h2 class="font-bold">Todos</h2>
@@ -49,12 +44,17 @@
     </form>
     <ul id="list">
       <adv-view id="view">
-        {{#todos}}
-          <todo-item data-title="{{title}}" id="{{id}}" data-id="{{id}}" data-complete="false"></todo-item>
-        {{/todos}}
-        {{^todos}}
+        <style>
+          :host{
+            background: green;
+          }
+        </style>
+        [[#todos]]
+          <todo-item data-title="[[title]]" id="[[id]]" data-id="[[id]]" data-complete="false"></todo-item>
+        [[/todos]]
+        [[^todos]]
          <li>No todos yet</li>
-        {{/todos}}
+        [[/todos]]
       </adv-view>
     </ul>
   </div>
