--- a/public/components/basic/todo-component.html
+++ b/public/components/basic/todo-component.html
@@ -1,7 +1,32 @@
 <script type="text/adv" src="components/basic/todo-item.html"></script>
 <template id="todo-component" adv>
+  <!--  -->
+  <script>
+    let todos = [];
+    const { input_name, view } = self.refs; // this is more efficient because refs reuns a querySelector
+    const onSubmit = (event) => {
+      event.preventDefault();
+      const todo = {
+        id: Date.now(),
+        title: input_name.value,
+        complete: false
+      };
+      todos.push(todo);
+      input_name.value = '';
+      view.render({ todos });
+    }
+    const handleDelete = (event) => {
+      event.stopPropagation();
+      todos = todos.filter(todo => todo.id != event.detail.todo.dataset.id);
+      view.render({ todos });
+    };
+    self.addEventListener('delete:todo', handleDelete);
+
+    const scope = { todos, onSubmit }
+    return scope;
+  </script>
   <div id="wrapper" class="todo-wrapper">
-    <form part="submit_form" id="form" onload="console.log('scope is',scope)" onsubmit="scope.onSubmit(event)">
+    <form part="submit_form" id="form" onsubmit="scope.onSubmit(event)">
       <slot name="title">
         <h2 class="font-bold">Todos</h2>
       </slot>
@@ -15,60 +40,28 @@
     </form>
     <ul id="list">
       <adv-view id="view">
-        <style>
-          :host{
-            background: green;
-          }
-        </style>
         [[#todos]]
-          <todo-item data-title="[[title]]" id="[[id]]" data-id="[[id]]" data-complete="false"></todo-item>
+        <todo-item data-title="[[title]]" id="[[id]]" data-id="[[id]]" data-complete="false"></todo-item>
         [[/todos]]
         [[^todos]]
-         <li>No todos yet</li>
+        <li>No todos yet</li>
         [[/todos]]
       </adv-view>
     </ul>
   </div>
-    <!--  -->
-  <script>
-      let todos = []; 
-      const { input_name, view } = self.refs; // this is more efficient because refs reuns a querySelector
 
-      const onSubmit = (event) => {
-        event.preventDefault();
-        const todo = {
-          id: Date.now(),
-          title: input_name.value,
-          complete: false
-        };
-        todos.push(todo);
-        input_name.value = '';
-        view.render({ todos });
+  <style>
+    .todo-wrapper {}
+    :host {
+      form {
+        background-color: blue;
+        backdrop-filter: blur(10px);
+        border: 1px solid var(--white);
+        border-radius: 10px;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
       }
-      $self.on('delete:todo', (event) => {
-        todos = todos.filter(todo => todo.id != event.detail.todo.dataset.id );
-        event.detail.todo.remove();
-        self.refs.view.render({ todos });
-      });
-
-
-      const scope =
-       {
-        todos,
-        onSubmit,
-      }
-      return scope;
-  </script>
-<style>
-  .todo-wrapper {}
-  form {
-    background-color: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(10px);
-    border: 1px solid var(--white);
-    border-radius: 10px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-  }
-</style>
+    }
+  </style>
 </template>
