--- a/public/components/basic/todo-component.html
+++ b/public/components/basic/todo-component.html
@@ -1,72 +1,97 @@
-<script type="text/adv" src="components/basic/todo-item.html"></script>
 <template id="todo-component" adv>
-  <!--  -->
-  <script>
-    let todos = [];
-    const { input_name, view } = self.refs; // this is more efficient because refs reuns a querySelector
-    const onSubmit = (event) => {
-      event.preventDefault();
-      const todo = {
-        id: `todo_${todos.length}`,
-        title: input_name.value,
-        complete: 'false'
-      };
-      todos.push(todo);
-      input_name.value = '';
-      view.render({ todos, scope });
-    }
-    const handleDelete = (event) => {
-      event.stopPropagation();
-      todos = todos.filter(todo => todo.id != event.detail.todo.dataset.id);
-      view.render({ todos });
-    };
-    self.addEventListener('delete:todo', handleDelete);
+    <script>
+        // Reference the elements in the component (any element with an id attribute)
+        const { todo_view, todo_dialog, new_todo_form, todo_name_input } = refs
+        // Define data for the compnent, 
+        let todos = []
+        // Define the "scope" of functionality for the component
+        const scope = {
+            toggleComplete(todoEl) {
+                todos.forEach(todo => {
+                    if (todo.id === todoEl.dataset.id) {
+                        todo.complete = !todo.complete;
+                    }
+                });
+                this.update();
+            },
+            addTodo(event) {
+                const todo = {
+                    id: `todo_${todos.length + 1}`,
+                    title: todo_name_input.value,
+                    complete: false
+                }
+                todos.push(todo);
+                new_todo_form.reset()
+                this.update();
 
-    const handleComplete = (event) => {
-      event.stopPropagation();
-      const todo = todos.find(todo => todo.id == event.detail.todo.dataset.id);
-      todo.complete = todo.complete == 'true' ? 'false' : 'true';
-      view.render({ todos });
-    };
+            },
+            removeTodo(todoEl) {
+                todos = todos.filter(todo => todo.id !== todoEl.dataset.id);
+                this.update();
+            },
+            update() {
+                todo_view.render({ todos });
+            }
+        }
 
-    const scope = { todos, onSubmit }
-    return scope;
-  </script>
-  <div id="wrapper" class="todo-wrapper">
-    <form part="submit_form" id="form" onsubmit="scope.onSubmit(event)">
-      <slot name="title">
-        <h2 class="font-bold">Todos</h2>
-      </slot>
-      <div>
-        <label for="input">
-          <span>Add a todo</span>
-          <input id="input_name" type="text" name="todo name input" class="border-b-2 border-slate-500" required />
-        </label>
-        <button class="">Submits</button>
-      </div>
-    </form>
-    <ul id="list">
-      <adv-view id="view">
-        [[#todos]]
-          <todo-item data-title="[[title]]" id="[[id]]" data-id="[[id]]" data-complete="[[complete]]"></todo-item>
-        [[/todos]]
-        [[^todos]]
-        <li>No todos yet</li>
-        [[/todos]]
-      </adv-view>
+        // Include local scope into the advect-view
+        todo_view.mergeScope(scope);
+        todo_view.mergeStyles(self.shadowRoot?.adoptedStyleSheets)
+        // update the view
+        scope.update();
+        // return the scope
+        return scope;
+    </script>
+    <style>
+        .todo-item {
+            display: flex;
+            justify-content: space-between;
+            margin: 10px 0;
+            padding: 10px;
+            border: 1px solid #ccc;
+            &[data-complete="true"]  header {
+                text-decoration: line-through;
+            }
+        }
+    </style>
+    <dialog id="todo_dialog">
+        <form id="new_todo_form" method="dialog" onsubmit="scope.addTodo(event)">
+            <input type="text" name="todo" id="todo_name_input" placeholder="Add a todo">
+            <input type="submit" value="Submit">
+        </form>
+    </dialog>
+    <div>
+        <button id="add_btn" onclick="refs.todo_dialog.showModal()">Add Todo</button>
+    </div>
+    <ul>
+        <adv-view id="todo_view">
+            {{#todos}}
+            <li data-title="{{title}}" id="{{id}}" data-id="{{id}}" data-complete="{{complete}}" class="todo-item">
+                <header>
+                    {{title}}
+                </header>
+                <div>
+                    <button id="complete_{{id}}" data-id="{{id}}" onclick="scope.toggleComplete(el.closest('li'))">
+                        {{#complete}}
+                        <span>
+                            Mark incomplete
+                        </span>
+                        {{/complete}}
+                        {{^complete}}
+                        <span>
+                            Mark complete
+                        </span>
+                        {{/complete}}
+                    </button>
+                    <button id="delete_{{id}}" onclick="scope.removeTodo(el.closest('li'))">
+                        Delete
+                    </button>
+                </div>
+            </li>
+            {{/todos}}
+            {{^todos}}
+                <li>No todos yet</li>
+            {{/todos}}
+        </adv-view>
     </ul>
-  </div>
-
-  <style>
-    :host {
-      form {
-      transition:all 0.2s;
-        border: 1px solid var(--white);
-        border-radius: 10px;
-        padding: 10px;
-        display: flex;
-        flex-direction: column;
-      }
-    }
-  </style>
 </template>
