--- a/src/style.css
+++ b/src/style.css
@@ -1,24 +1,104 @@
+@import "https://unpkg.com/pollen-css";
+
+:root {
+  /* CSS Variables */
+  font-size: 20px;
+  font-family: var(--font-sans);
+}
+
+:defined {
+  transition: opacity 0.5s;
+  transition-delay: 0.5s;
+  @starting-style {
+    opacity: 1;
+  }
+}
+:not(:defined) {
+  opacity: 0;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    /* CSS Variables */
+    --text-color: #222;
+  }
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
-    color:#f9f9f9;
-    background-color: #213547;
-  }
-  a:hover {
-    color:#f9f9f9;;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-
-  :defined{
-    transition: opacity 0.5s;
-    transition-delay: 0.5s;
-    @starting-style{
-      opacity: 1;
-    }
-  }
-  :not(:defined){
-    opacity: 0;
+    /* CSS Variables */
+    --text-color: #ddd;
   }
 }
+
+/* containers */
+header {
+}
+main {
+}
+footer {
+}
+section {
+}
+article {
+}
+aside {
+}
+nav {
+}
+
+/* /containers */
+
+/* typography */
+h1 {
+  font-size: var(--scale-fluid-7);
+}
+h2 {
+  font-size: var(--scale-fluid-6);
+}
+h3 {
+  font-size: var(--scale-fluid-5);
+}
+h4 {
+  font-size: var(--scale-fluid-4);
+}
+h5 {
+  font-size: var(--scale-fluid-3);
+}
+h6 {
+  font-size: var(--scale-fluid-2);
+}
+p {
+  font-size: var(--scale-fluid-2);
+}
+a {
+  font-size: var(--scale-fluid-2);
+}
+ul {
+}
+ol {
+}
+li {
+}
+blockquote {
+}
+pre {
+}
+code {
+
+}
+em {
+  &::before {
+    content: """;
+  }
+  &::after {
+    content: """;
+  }
+}
+strong {
+  font-weight: var(--weight-bold)
+}
+small {
+  font-size: var(--scale-fluid-1);
+}
+/* /typography */
